Add latex support

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -45,5 +45,7 @@
     <link rel="stylesheet" type="text/css" href="{{ .Site.Params.categoriescss }}">
   {{ end }}
 
+  {{ partial "latex.html" . }}
+
   {{ partial "headend.html" . }}
 </head>
