--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -14,6 +14,9 @@
         <li class="nav-item"><span class="nav-item-separator">//</span><a href="{{ .Site.BaseURL }}">Home</a></li>
         {{ range .Site.Menus.main }}
           <li class="nav-item"><span class="nav-item-separator">//</span><a href="{{ .URL }}">{{ .Name }}</a></li>
+          {{ if (eq .Name "About") }}
+          <br>
+          {{ end }}
         {{ end }}
       </ul>
     </nav>
