Add funky canvas to sidebar

--- a/static/css/redlounge.css
+++ b/static/css/redlounge.css
@@ -96,7 +96,7 @@ h2.brand-tagline {
 	font-weight: 200;
 }
 .sidebar {
-	background: #2d303b;
+	background: black;
 }
 .sidebar, .sidebar p {
 	color: #8b8b8b;
