--- a/static/css/canvas.css
+++ b/static/css/canvas.css
@@ -3,3 +3,16 @@
 	width: 100%;
 	display: inline-block;
 }
+
+.sidebarphoto {
+	width:160px;
+	height:160px;
+	border-radius: 50%;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+}
+
+.1-3 {
+	width: 33%;
+	float: left;
+}
