--- a/static/css/canvas.css
+++ b/static/css/canvas.css
@@ -10,9 +10,9 @@
 	border-radius: 50%;
 	-moz-border-radius: 50%;
 	-webkit-border-radius: 50%;
+	margin-right: 20px;
 }
 
-.1-3 {
-	width: 33%;
+.float-left {
 	float: left;
 }
