Update sidebar index

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -11,12 +11,21 @@
 
     <nav class="nav">
       <ul class="nav-list">
-        <li class="nav-item"><span class="nav-item-separator">//</span><a href="{{ .Site.BaseURL }}">Home</a></li>
-        {{ range .Site.Menus.main }}
+        <li class="nav-item"><span class="nav-item-separator">//</span><a href="{{ .Site.BaseURL }}/introduction/introduction">Home</a></li>
+        {{ range .Site.Menus.about }}
           <li class="nav-item"><span class="nav-item-separator">//</span><a href="{{ .URL }}">{{ .Name }}</a></li>
-          {{ if (eq .Name "About") }}
-          <br>
-          {{ end }}
+        {{ end }}
+        <br>
+        <li class="nav-item-main"><span class="nav-item-separator">I</span><span>Typed pi-calculus</span></li>
+        <br>
+        {{ range $index, $element := .Site.Menus.intro}}
+          <li class="nav-item"><span class="nav-item-separator">{{ add $index 1 }}</span><a href="{{ .URL }}">{{ .Name }}</a></li>
+        {{ end }}
+        <br>
+        <li class="nav-item-main"><span class="nav-item-separator">II</span><span>Advanced typing</span></li>
+        <br>
+        {{ range $index, $element := .Site.Menus.advanced }}
+          <li class="nav-item"><span class="nav-item-separator">{{ add $index 1 }}</span><a href="{{ .URL }}">{{ .Name }}</a></li> <br>
         {{ end }}
       </ul>
     </nav>
