--- a/static/css/redlounge.css
+++ b/static/css/redlounge.css
@@ -123,7 +123,19 @@ h2.brand-tagline {
 	margin-left: 80px;
 }
 
-.nav-item-main span {
+.nav-item-main .item-heading {
+	background: transparent;
+    color: #fff;
+    margin-top: 1rem;
+    letter-spacing: 0.05rem;
+    text-transform: uppercase;
+    font-size: 0.85rem;
+    text-decoration: none;
+    margin-right: 0.1rem;
+    line-height: 1.5rem;
+}
+
+.nav-item-main a {
 	background: transparent;
     color: #fff;
     margin-top: 1rem;
