Change header margin

--- a/static/css/redlounge.css
+++ b/static/css/redlounge.css
@@ -70,7 +70,7 @@ h1 {
 .header {
     text-align: center;
     top: auto;
-    margin: 3em auto;
+    margin: 2em auto;
 }
 .content {
     padding: 2em 1em 0;
@@ -497,6 +497,7 @@ hr.thin {
 
     .header {
         margin: 30% 2rem 0;
+        margin-top: 1rem;
         text-align: right;
     }
 
