Fix broken links

--- a/static/css/redlounge.css
+++ b/static/css/redlounge.css
@@ -150,6 +150,8 @@ h2.brand-tagline {
 .nav-item {
     display: inline-block;
     *display: inline;
+    float: left;
+    margin-left: 120px;
     zoom: 1;
 }
 .nav-item a {
