--- a/static/css/redlounge.css
+++ b/static/css/redlounge.css
@@ -115,6 +115,7 @@ h2.brand-tagline {
     list-style: none;
     padding-bottom: 1rem;
     min-height: 400px;
+    min-width: 400px;
 }
 .nav-item-main {
 	display: inline-block;
